<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                tools:context="com.example.cwitteacher.mymap.MapViewActivity">

    <TextView
        android:id="@+id/mLatitudeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Latitude" />

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="24dp"
        android:hint="經度"
        android:text="latitude"
        android:textIsSelectable="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mLongitudeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/hint_Longitude" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="72dp"
        android:text="longitude"
        android:textIsSelectable="true"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/mTimeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="@string/hint_Time" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:text="time"
        android:textIsSelectable="true"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="180dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="horizontal">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStartClicked"
            android:showText="false"
            android:text="On/Off"/>

        <Button
            android:id="@+id/mLocateButton"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:hint="@string/button_Locate"
            android:onClick="onLocateClicked" />

        <Button
            android:id="@+id/mMapFragButton"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:hint="@string/button_MAP_FRAG"
            android:onClick="onMapFragClicked" />

        <Button
            android:id="@+id/mMapViewButton"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:hint="@string/button_MAP_VIEW"
            android:onClick="onMapViewClicked" />

        <Button
            android:id="@+id/mMyLocalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/button_My_Local"
            android:onClick="onMapStorageClicked" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="230dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:gravity="top"
        android:text="output area" />
</RelativeLayout>
